make verion based chocie in system jvm options